Navigation Fix: Realized the navigation was off-center, found the CSS fix

--- a/client/src/components/Navigation/Navigation.css
+++ b/client/src/components/Navigation/Navigation.css
@@ -1,5 +1,4 @@
-.main-nav-wrapper {
-  padding: 0;
+.main-nav-wrapper {  
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
